Revision history for Perl extension POE::Component::SimpleDBI.

{{$NEXT}}

1.30
	Released: 2011-02-10 02:58:17 UTC

	Converted to Dist::Zilla for the release process!
	Added SYNCHRONOUS_MODE to new() for easier DB debugging - thanks RCAPUTO!

1.29

	Added better caching control in the SubProcess - resolves a memory leak, thanks Andrew Feren and wirelessdreamer!
	Added the CACHEDKIDS argument to CONNECT

1.28

	Minor POD tweaks
	Fixed RT#45948 ( Database doesn't reconnect when child died ) - thanks Paul Williams!
	Fixed RT#48237 ( use of exit causes crashes in threaded code (MsWin32) ) - thanks Andrew Feren!
	Fixed RT#48400 ( BAGGAGE not a valid argument for CONNECT ) - thanks Andrew Feren!
	BAGGAGE is now a valid argument for CONNECT/DISCONNECT

1.27

	Fixed RT#43408 ( fix "Modification of a read-only value attempted at" error at shutdown ) - thanks acferen!
	Fixed RT#43442 ( tweak binmode for MSWin32 ) - thanks acferen!
	Added link to the github.com repository in the POD
	Added link to CPAN::Forum in the POD

1.26

	Kwalitee-related fixes ( moved to Test::Apocalypse )
	Fixed RT#42890 ( tweaked Wheel::Run arguments on Win32, please yell at me if it doesn't work for you! )
	Added sigCHLD management

1.25

	Kwalitee-related fixes

1.24

	Bumped Test::More prereq to 0.86 because I was getting FAIL reports from outdated people :(

1.23

	Switched to Build.PL for the build system
	Fixed the stupid test dependencies, thanks BiNGOs!
	Added the new EXPERIMENTAL 'ATOMIC' support, please let me know if it's broken on your setup!
	Added some more author tests
	Added AUTO_COMMIT argument to CONNECT to control the DBI variable ( defaults to true )

1.22

	Kwalitee-related fixes

1.21

	silence warnings when used with DBD::SQLite - thanks to Sjors Gielen for tracking this down!

1.20

	Added the INSERT_ID to control $dbh->last_insert_id usage

1.19

	Added the PREPARE_CACHED argument to control caching

1.18

	Ignore the DBI error for last_insert_id and default to undef

1.17
